# BugSquash

./: CMakeLists.txt  GameApp.cpp  GameApp.h  Player.h  README.md  main.cpp
GameLib/: BugCollection.cpp  BugCollection.h  BugCounter.cpp  BugCounter.h  CMakeLists.txt  Code.cpp  Code.h  CodeWindow.cpp  CodeWindow.h  DoublePointsBug.cpp  DoublePointsBug.h  FatBug.cpp  FatBug.h  Feature.cpp  Feature.h  Game.cpp  Game.h  GameView.cpp  GameView.h  GarbageBug.cpp  GarbageBug.h  IDE.cpp  IDE.h  Item.cpp  Item.h  Laptop.cpp  Laptop.h  Leaderboard.cpp  Leaderboard.h  LeadershipBoard.cpp  LeadershipBoard.h  Level.cpp  Level.h  Level0.cpp  Level0.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  (+14 more)
Tests/: CMakeLists.txt  CodeTest.cpp  FatBugTest.cpp  FeatureBugTest.cpp  GameTest.cpp  GarbageBugTest.cpp  IDETest.cpp  ItemTest.cpp  NullBugTest.cpp  RedundancyTest.cpp
Tests/test-data/: garage-bug-1.xml
levels/: level0.xml  level3.xml
resources/data/: level0.xml
